updated README.md and fixed few minor thing to meet requirements